<resources>
    <string name="app_name">Mr. Buffet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>


    <string name="menu_principal">Principal</string>
    <string name="menu_servicos">Buffets Favoritados</string>
    <string name="menu_clientes">Buffets Solicitados</string>
    <string name="menu_sobre">Sobre Nós</string>
    <string name="navegacao_email">mrbuffet@outlook.com.br</string>
    <string name="navegacao_titulo">Mr. Buffet</string>
    <string name="nav_contato">Contato</string>


    <string name="menu_buffets">Pesquisar por Buffets... </string>
    <string name="menu_favoritados">Buffets Favoritados</string>
    <string name="menu_solicitados">Buffets Solicitados</string>
    <string name="menu_contato">Trabalhe Conosco</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Faça o login ou registre-se</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Seja Bem-Vindo!"</string>
    <string name="invalid_username">Não é um nome de usuário válido!</string>
    <string name="invalid_password">A senha deve ser maior que 5 caracteres!</string>
    <string name="login_failed">"Login falhou"</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>