<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_postagens">

    <fragment
        android:id="@+id/nav_contato"
        android:name="com.diow.mrbuffet.ui.contato.ContatoFragment"
        android:label="@string/menu_contato"
        tools:layout="@layout/fragment_contato" />

    <fragment
        android:id="@+id/nav_solicitados"
        android:name="com.diow.mrbuffet.ui.home.SolicidadosFragment"
        android:label="@string/menu_solicitados"
        tools:layout="@layout/fragment_solicitados" />

    <fragment
        android:id="@+id/nav_favoritados"
        android:name="com.diow.mrbuffet.ui.gallery.FavoritadosFragment"
        android:label="@string/menu_favoritados"
        tools:layout="@layout/fragment_favoritados" />

    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.diow.mrbuffet.ui.sobre.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_sobre" />
    <fragment
        android:id="@+id/nav_postagens"
        android:name="com.diow.mrbuffet.PostagemFragment"
        android:label="@string/menu_buffets"
        tools:layout="@layout/fragment_postagem_list" />

<!--    <fragment-->
<!--        android:id="@+id/nav_tela_inicio"-->
<!--        android:name="com.diow.mrbuffet.ui.login.TelaInicioFragment"-->
<!--        android:label="Tela de Boas_Vindas"-->
<!--        tools:layout="@layout/fragment_tela_inicio" />-->


</navigation>